--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <div>
         <a href="index.html">Home</a>,
         <a href="about.html">About me</a>
+        <a href="contact.html">Contact</a>
     </div>
     <body>
 
