--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Home{% endblock title %}
+
 {% block content %}
 <h1>Let's try out Jinja!</h1>
 {% endblock content %}
